crates/kata-cli/src/ui/snapshots/kata__ui__frame__tests__bare_frame_needs_you_plain.snap
---
source: crates/kata-cli/src/ui/frame.rs
assertion_line: 475
expression: text
---
 ▸ kata   3 kata                  needs you: 1 grant · 2 drafts

 starter
   hello       ● low   Print a greeting
   disk-usage  ● low   Disk usage of a directory

 sesami                git ✓
   ses-deploy  ● critical   Trigger the SES Deploy pipeline

 needs you
   grant  sesami/ses-deploy  version=25.6.1.2 oke_cluster=uat   claude-code · 4m ago
          kata grant approve 7c1e   ·   kata grant deny 7c1e
   draft  proposed/ops/argocd-sync                kata accept ops/argocd-sync
   draft  mined/k8s-pod-logs                kata mine review

 run  kata run   ·   help  kata --help
